# soy_bot

./: Cargo.toml  README.md  notes.txt
.github/: copilot-instructions.md
.github/workflows/: rust.yml
rust-sc2/: Cargo.toml
rust-sc2/examples/: debug-bot.rs  events.rs  reaper-rush.rs  runner.rs  speed-mining.rs  worker-rush.rs  zerg-rush.rs
rust-sc2/examples/ex_main/: mod.rs
rust-sc2/sc2-macro/: Cargo.toml
rust-sc2/sc2-macro/macro/src/: lib.rs
rust-sc2/sc2-macro/src/: lib.rs
rust-sc2/src/: action.rs  api.rs  bot.rs  client.rs  consts.rs  debug.rs  game_data.rs  game_info.rs  game_state.rs  geometry.rs  lib.rs  paths.rs  pixel_map.rs  player.rs  ramp.rs  score.rs  unit.rs
rust-sc2/src/distance/: mod.rs  rayon.rs
rust-sc2/src/ids/: ability_id.rs  buff_id.rs  effect_id.rs  impls.rs  unit_typeid.rs  upgrade_id.rs
rust-sc2/src/units/: iter.rs  mod.rs  rayon.rs
rust-sc2/src/utils/: mod.rs
sc2-macro/: Cargo.toml
sc2-macro/macro/: Cargo.toml
sc2-proto-rs/: Cargo.toml  build.rs
sc2-proto-rs/src/: common.rs  data.rs  debug.rs  error.rs  query.rs  raw.rs  sc2api.rs  score.rs  spatial.rs  ui.rs
soy_bot/: Cargo.toml
soy_bot/src/: main.rs  soy_bot.rs  soy_player.rs
src/: main.rs  soy_bot.rs
